--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,81 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="main.js"></script>
-  </body>
-</html>
+      <div id="root"></div>
+      <div class="contenedor">
+        <header>
+          <div class="logo">
+            <img src="img/PokeDesk.png" alt="LogoPokédesk">
+            <p>Es tu escritorio de bolsillo para conocer las caracteristicas de cada pokémon.</p>
+          </div>
+
+          <form action="">
+            <input type="text" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar por nombre o número">
+          </form>
+          
+          <div>
+            <ul class="nav">
+              <li><a href="#" class="activo">Todos</a></li>
+              <li><a href="">Tipo</a>
+               <ul>
+                 <li><a href="">Bug</a></li>
+                 <li><a href="">Dragón</a></li>
+                 <li><a href="">Electric</a></li>
+                 <li><a href="">Fighting</a></li>
+                 <li><a href="">Fire</a></li>
+                 <li><a href="">Flying</a></li>
+                 <li><a href="">Ghost</a></li>
+                 <li><a href="">Grass</a></li>
+                 <li><a href="">Ground</a></li>
+                 <li><a href="">Ice</a></li>
+                 <li><a href="">Normal</a></li>
+                 <li><a href="">Poison</a></li>
+                 <li><a href="">Pshychic</a></li>
+                 <li><a href="">Rock</a></li>
+                 <li><a href="">Water</a></li>
+                </ul>
+              </li>
+     
+           <li><a href="">Debilidad</a>
+           <ul>
+             <li><a href="">Bug</a></li>
+             <li><a href="">Dragón</a></li>
+             <li><a href="">Electric</a></li>
+             <li><a href="">Fighting</a></li>
+             <li><a href="">Fire</a></li>
+             <li><a href="">Flying</a></li>
+             <li><a href="">Ghost</a></li>
+             <li><a href="">Grass</a></li>
+             <li><a href="">Ground</a></li>
+             <li><a href="">Ice</a></li>
+             <li><a href="">Normal</a></li>
+             <li><a href="">Poison</a></li>
+             <li><a href="">Pshychic</a></li>
+             <li><a href="">Rock</a></li>
+             <li><a href="">Water</a></li>
+           </ul>
+         </li>
+         <li><a href="">Alfabéticamente</a>
+             <ul> 
+               <li><a href=""> de la A-Z</a></li>
+               <li><a href=""> de la Z-A</a></li>
+           </ul>
+         </li>
+       </ul>
+     </div>
+        </header>
+
+      <section id="info">
+        <p>info</p>
+      </section>
+
+        <footer class="contenedor">
+          <div class="creado-por">
+            <p>Sitio diseñado por Camila Rojas & Tamara Muñoz</p>
+          </div>
+        </footer>
+      </div>
+  
+      <script type="module" src="main.js"></script>
+    </body>
+  </html>
