--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,96 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="main.js"></script>
-  </body>
-</html>
+      <div class="container">
+        <header>
+          <div class="logo">
+            <img class="logoPoke" src="img/PokeDesk.png" alt="LogoPokédesk">
+            <p>Tu escritorio de bolsillo para conocer las caracteristicas de cada pokémon</p>
+          </div>
+
+          <form action="">
+            <input type="text" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar por nombre o número">
+          </form>
+          
+          <nav class="nav">
+            <div class="column">
+            <input class="boton" type="button" value="Todos" id="showAll">
+            </div>
+
+            <div class="column">
+              <label class="labelTitle"><b>Tipo:</b>
+                <select class="filterType" name="type" id="filterType">
+                  <option value="selection" disabled>Selecciona</option>
+                  <option value="Bug">Bug</option>
+                  <option value="Dark">Dark</option>
+                  <option value="Dragon">Dragon</option>
+                  <option value="Electric">Electric</option>
+                  <option value="Fairy">Fairy</option>
+                  <option value="Fighting">Fighting</option>
+                  <option value="Fire">Fire</option>
+                  <option value="Flying">Flying</option>
+                  <option value="Ghost">Ghost</option>
+                  <option value="Grass">Grass</option>
+                  <option value="Ground">Ground</option>
+                  <option value="Ice">Ice</option>
+                  <option value="Normal">Normal</option>
+                  <option value="Poison">Poison</option>
+                  <option value="Psychic">Psychic</option>
+                  <option value="Rock">Rock</option>
+                  <option value="Steal">Steel</option>
+                  <option value="Water">Water</option>
+                </select>
+              </label>
+            </div>
+     
+            <div class="column">
+              <label class="labelTitle"><b>Debilidad</b>
+                <select class="filterWeakness" name="weakness" id="filterWeakness">
+                  <option value="selection" disabled>Selecciona</option>
+                  <option value="Bug">Bug</option>
+                  <option value="Dark">Dark</option>
+                  <option value="Dragon">Dragon</option>
+                  <option value="Electric">Electric</option>
+                  <option value="Fairy">Fairy</option>
+                  <option value="Fighting">Fighting</option>
+                  <option value="Fire">Fire</option>
+                  <option value="Flying">Flying</option>
+                  <option value="Ghost">Ghost</option>
+                  <option value="Grass">Grass</option>
+                  <option value="Ground">Ground</option>
+                  <option value="Ice">Ice</option>
+                  <option value="Normal">Normal</option>
+                  <option value="Poison">Poison</option>
+                  <option value="Psychic">Psychic</option>
+                  <option value="Rock">Rock</option>
+                  <option value="Steal">Steel</option>
+                  <option value="Water">Water</option>
+                </select>
+              </label>
+            </div>
+
+            <div class="column">
+              <label class="labelTitle"><b>Alfabeto</b>
+                <select class="filterOrder" id="orderABC">
+                  <option value="selection">Selecciona</option>
+                  <option id="az" sortby="name" orderby="asc" value="A">A - Z</option>
+                </select>
+              </label>
+            </div>
+          </header>
+
+
+          <section id="info">
+            <p>INFO</p>
+          </section>
+
+          <footer class="pie">
+            <div class="creado-por">
+              <p>Sitio diseñado por Camila Rojas & Tamara Muñoz</p>
+            </div>
+          </footer>
+      </div>
+  
+      <script type="module" src="main.js"></script>
+    </body>
+  </html>
