actualizando js y DOM

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 
             <div class="column">
               <label class="labelTitle"><b>Tipo:</b>
-                <select class="filterType" name="type" id="filterType" onchange="filterType()">
+                <select class="filterType" name="type" id="filterType">
                   <option value="selection">Selecciona</option>
                   <option value="Bug">Bug</option>
                   <option value="Dark">Dark</option>
