integrando fondo a las cartas, opacando fondo

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           </div>
 
           <form action="">
-            <input type="text" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar por nombre tu Pokemon">
+            <input type="text" class="barra-busqueda" id="barra-busqueda" placeholder="Buscar por nombre">
           </form>
           
           <nav class="nav">
